[package]
name = "hyper-key"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "windows")'.build-dependencies]
tauri-winres = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
]}

[dependencies]
anyhow = "1.0.97"
serde = "1.0.0"
serde_json = "1.0.0"
tray-icon = "0.20.0"
tiny_http = "0.12.0"
open = "5.3.2"
serde_repr = "0.1.20"
advisory-lock = "0.3.0"
rust-embed = { version = "8.6.0", features = ["compression"] }
simplelog = "0.12.2"
log = "0.4.27"
